// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tab lineWidth is auto 1`] = `
<div
  className="za-tabs za-tabs--horizontal"
>
  <isPrevTabHeader
    activeIndex={0}
    animationDuration={300}
    canSwipe={false}
    defaultValue={0}
    disabled={false}
    hasline={false}
    horizontal={true}
    lineWidth={30}
    moveDistanceRatio={0.5}
    onTabHeaderClick={[Function]}
    page={5}
    prefixCls="za-tabs"
    scrollElastic={true}
    tabHeight={40}
    tabWidth={70}
    useTabPaged={false}
  >
    <TabPanel
      key="0"
      prefixCls="za-tabs"
    >
      <div>
        试试点我左滑
      </div>
    </TabPanel>
    <TabPanel
      key="1"
      prefixCls="za-tabs"
    >
      <div>
        试试点我右滑
      </div>
    </TabPanel>
  </isPrevTabHeader>
  <div
    className="za-tabs__container"
  >
    <TabPanel
      key=".$0"
      prefixCls="za-tabs"
      selected={true}
    >
      <div>
        试试点我左滑
      </div>
    </TabPanel>
    <TabPanel
      key=".$1"
      prefixCls="za-tabs"
      selected={false}
    >
      <div>
        试试点我右滑
      </div>
    </TabPanel>
    0
  </div>
</div>
`;

exports[`Tab scrollElastic 禁止弹性 左侧右侧  1`] = `
<Tabs
  canSwipe={true}
  defaultValue={0}
  disabled={false}
  hasline={false}
  horizontal={true}
  moveDistanceRatio={0.5}
  onChange={
    [MockFunction] {
      "calls": Array [
        Array [
          0,
        ],
        Array [
          14,
        ],
        Array [
          14,
        ],
        Array [
          14,
        ],
        Array [
          14,
        ],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
      ],
    }
  }
  page={5}
  prefixCls="za-tabs"
  scrollElastic={false}
  useTabPaged={true}
>
  <div
    className="za-tabs za-tabs--paged za-tabs--horizontal"
  >
    <isPrevTabHeader
      activeIndex={14}
      animationDuration={300}
      canSwipe={true}
      defaultValue={0}
      disabled={false}
      hasline={false}
      horizontal={true}
      moveDistanceRatio={0.5}
      onChange={
        [MockFunction] {
          "calls": Array [
            Array [
              0,
            ],
            Array [
              14,
            ],
            Array [
              14,
            ],
            Array [
              14,
            ],
            Array [
              14,
            ],
          ],
          "results": Array [
            Object {
              "isThrow": false,
              "value": undefined,
            },
            Object {
              "isThrow": false,
              "value": undefined,
            },
            Object {
              "isThrow": false,
              "value": undefined,
            },
            Object {
              "isThrow": false,
              "value": undefined,
            },
            Object {
              "isThrow": false,
              "value": undefined,
            },
          ],
        }
      }
      onTabHeaderClick={[Function]}
      page={5}
      prefixCls="za-tabs"
      scrollElastic={false}
      tabHeight={40}
      tabWidth={70}
      useTabPaged={true}
    >
      <div
        className="za-tabs__header"
      >
        <Drag
          onDragEnd={[Function]}
          onDragMove={[Function]}
        >
          <ul
            onMouseDown={[Function]}
            onMouseMove={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tablist"
          >
            <li
              className="za-tabs__header__item"
              key=".$0"
              onClick={[Function]}
              role="tab"
              style={
                Object {
                  "flexBasis": 70,
                  "height": "auto",
                }
              }
            >
              选项卡0
            </li>
            <li
              className="za-tabs__header__item"
              key=".$1"
              onClick={[Function]}
              role="tab"
              style={
                Object {
                  "flexBasis": 70,
                  "height": "auto",
                }
              }
            >
              选项卡1
            </li>
            <li
              className="za-tabs__header__item"
              key=".$2"
              onClick={[Function]}
              role="tab"
              style={
                Object {
                  "flexBasis": 70,
                  "height": "auto",
                }
              }
            >
              选项卡2
            </li>
            <li
              className="za-tabs__header__item"
              key=".$3"
              onClick={[Function]}
              role="tab"
              style={
                Object {
                  "flexBasis": 70,
                  "height": "auto",
                }
              }
            >
              选项卡3
            </li>
            <li
              className="za-tabs__header__item"
              key=".$4"
              onClick={[Function]}
              role="tab"
              style={
                Object {
                  "flexBasis": 70,
                  "height": "auto",
                }
              }
            >
              选项卡4
            </li>
            <li
              className="za-tabs__header__item"
              key=".$5"
              onClick={[Function]}
              role="tab"
              style={
                Object {
                  "flexBasis": 70,
                  "height": "auto",
                }
              }
            >
              选项卡5
            </li>
            <li
              className="za-tabs__header__item"
              key=".$6"
              onClick={[Function]}
              role="tab"
              style={
                Object {
                  "flexBasis": 70,
                  "height": "auto",
                }
              }
            >
              选项卡6
            </li>
            <li
              className="za-tabs__header__item"
              key=".$7"
              onClick={[Function]}
              role="tab"
              style={
                Object {
                  "flexBasis": 70,
                  "height": "auto",
                }
              }
            >
              选项卡7
            </li>
            <li
              className="za-tabs__header__item"
              key=".$8"
              onClick={[Function]}
              role="tab"
              style={
                Object {
                  "flexBasis": 70,
                  "height": "auto",
                }
              }
            >
              选项卡8
            </li>
            <li
              className="za-tabs__header__item"
              key=".$9"
              onClick={[Function]}
              role="tab"
              style={
                Object {
                  "flexBasis": 70,
                  "height": "auto",
                }
              }
            >
              选项卡9
            </li>
            <li
              className="za-tabs__header__item"
              key=".$10"
              onClick={[Function]}
              role="tab"
              style={
                Object {
                  "flexBasis": 70,
                  "height": "auto",
                }
              }
            >
              选项卡10
            </li>
            <li
              className="za-tabs__header__item"
              key=".$11"
              onClick={[Function]}
              role="tab"
              style={
                Object {
                  "flexBasis": 70,
                  "height": "auto",
                }
              }
            >
              选项卡11
            </li>
            <li
              className="za-tabs__header__item"
              key=".$12"
              onClick={[Function]}
              role="tab"
              style={
                Object {
                  "flexBasis": 70,
                  "height": "auto",
                }
              }
            >
              选项卡12
            </li>
            <li
              className="za-tabs__header__item"
              key=".$13"
              onClick={[Function]}
              role="tab"
              style={
                Object {
                  "flexBasis": 70,
                  "height": "auto",
                }
              }
            >
              选项卡13
            </li>
            <li
              className="za-tabs__header__item"
              key=".$14"
              onClick={[Function]}
              role="tab"
              style={
                Object {
                  "flexBasis": 70,
                  "height": "auto",
                }
              }
            >
              选项卡14
            </li>
          </ul>
        </Drag>
        <div
          className="za-tabs__line"
          style={
            Object {
              "width": 70,
            }
          }
        />
      </div>
    </isPrevTabHeader>
    <div
      className="za-tabs__container"
    >
      <Carousel
        activeIndex={14}
        animationDuration={300}
        autoPlay={false}
        autoPlayIntervalTime={3000}
        direction="left"
        height={160}
        loop={false}
        moveDistanceRatio={0.5}
        moveTimeSpan={300}
        onChange={[Function]}
        prefixCls="za-carousel"
        showPagination={false}
      >
        <div
          className="za-carousel za-carousel--horizontal"
        >
          <Drag
            onDragEnd={[Function]}
            onDragMove={[Function]}
            onDragStart={[Function]}
          >
            <div
              className="za-carousel__items"
              onMouseDown={[Function]}
              onMouseMove={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              onTransitionEnd={[Function]}
              style={Object {}}
            >
              <div
                className="za-carousel__item"
                key="0/.$.$0"
              >
                <div>
                  选项卡内容0
                </div>
              </div>
              <div
                className="za-carousel__item"
                key="1/.$.$1"
              >
                <div>
                  选项卡内容1
                </div>
              </div>
              <div
                className="za-carousel__item"
                key="2/.$.$2"
              >
                <div>
                  选项卡内容2
                </div>
              </div>
              <div
                className="za-carousel__item"
                key="3/.$.$3"
              >
                <div>
                  选项卡内容3
                </div>
              </div>
              <div
                className="za-carousel__item"
                key="4/.$.$4"
              >
                <div>
                  选项卡内容4
                </div>
              </div>
              <div
                className="za-carousel__item"
                key="5/.$.$5"
              >
                <div>
                  选项卡内容5
                </div>
              </div>
              <div
                className="za-carousel__item"
                key="6/.$.$6"
              >
                <div>
                  选项卡内容6
                </div>
              </div>
              <div
                className="za-carousel__item"
                key="7/.$.$7"
              >
                <div>
                  选项卡内容7
                </div>
              </div>
              <div
                className="za-carousel__item"
                key="8/.$.$8"
              >
                <div>
                  选项卡内容8
                </div>
              </div>
              <div
                className="za-carousel__item"
                key="9/.$.$9"
              >
                <div>
                  选项卡内容9
                </div>
              </div>
              <div
                className="za-carousel__item"
                key="10/.$.$10"
              >
                <div>
                  选项卡内容10
                </div>
              </div>
              <div
                className="za-carousel__item"
                key="11/.$.$11"
              >
                <div>
                  选项卡内容11
                </div>
              </div>
              <div
                className="za-carousel__item"
                key="12/.$.$12"
              >
                <div>
                  选项卡内容12
                </div>
              </div>
              <div
                className="za-carousel__item"
                key="13/.$.$13"
              >
                <div>
                  选项卡内容13
                </div>
              </div>
              <div
                className="za-carousel__item"
                key="14/.$.$14"
              >
                <div>
                  选项卡内容14
                </div>
              </div>
            </div>
          </Drag>
        </div>
      </Carousel>
      14
    </div>
  </div>
</Tabs>
`;

exports[`Tab tabWidth is Set 1`] = `
<div
  className="za-tabs za-tabs--horizontal"
>
  <isPrevTabHeader
    activeIndex={0}
    animationDuration={300}
    canSwipe={false}
    defaultValue={0}
    disabled={false}
    hasline={false}
    horizontal={true}
    moveDistanceRatio={0.5}
    onTabHeaderClick={[Function]}
    page={5}
    prefixCls="za-tabs"
    scrollElastic={true}
    tabHeight={40}
    tabWidth={80}
    useTabPaged={false}
  >
    <TabPanel
      key="0"
      prefixCls="za-tabs"
      title="选项卡0"
    >
      <div>
        选项卡内容0
      </div>
    </TabPanel>
    <TabPanel
      key="1"
      prefixCls="za-tabs"
      title="选项卡1"
    >
      <div>
        选项卡内容1
      </div>
    </TabPanel>
  </isPrevTabHeader>
  <div
    className="za-tabs__container"
  >
    <TabPanel
      key=".$0"
      prefixCls="za-tabs"
      selected={true}
      title="选项卡0"
    >
      <div>
        选项卡内容0
      </div>
    </TabPanel>
    <TabPanel
      key=".$1"
      prefixCls="za-tabs"
      selected={false}
      title="选项卡1"
    >
      <div>
        选项卡内容1
      </div>
    </TabPanel>
    0
  </div>
</div>
`;
